# MyBCA.Server/Dtos/News/NewsStoryDto.cs
@@ -1,8 +1,10 @@
 namespace MyBCA.Server.Dtos.News;
 
 public record NewsStoryDto(
+    int Id,
     string Title,
     string Link,
     string? ImageLink,
+    string? ContentHtml,
     DateTime CreatedAt
 );
