# MyBCA.Server/Models/News/NewsStory.cs
@@ -1,8 +1,10 @@
 namespace MyBCA.Server.Models.News;
 
 public record NewsStory(
+    int Id,
     string Title,
     string Link,
     string? ImageLink,
+    string? ContentHtml,
     DateTime CreatedAt
 );
